--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "publish": "electron-forge publish",
+    "renderer:dev": "yarn --cwd renderer dev"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.1.1",
@@ -21,7 +22,10 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "update-electron-app": "^2.0.1"
+    "minimist": "^1.2.8",
+    "undici": "^5.22.1",
+    "update-electron-app": "^2.0.1",
+    "ws": "^8.13.0"
   },
   "repository": {
     "type": "git",
