--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "danmaku",
   "version": "1.0.0",
-  "main": "dist/main.js",
+  "main": "dist/main/index.js",
   "license": "MIT",
   "private": true,
   "scripts": {
     "start": "electron-forge start",
-    "build": "vite build",
-    "watch": "vite build -w --mode development",
+    "build": "tsx build.ts",
+    "watch": "tsx build.ts --watch",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -20,7 +20,10 @@
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
     "@electron-forge/publisher-github": "^6.1.1",
-    "electron": "^24.3.1"
+    "dotenv": "^16.1.3",
+    "electron": "^24.3.1",
+    "esbuild-plugin-clean": "^1.0.1",
+    "tsx": "^3.12.7"
   },
   "dependencies": {
     "@types/ws": "^8.5.4",
