--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
     "@electron-forge/publisher-github": "^6.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "dotenv": "^16.1.3",
+    "eslint": "^8.38.0",
     "electron": "^24.3.1",
-    "tsx": "^3.12.7"
+    "tsx": "^3.12.7",
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "@types/ws": "^8.5.4",
