--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "dotenv": "^16.1.3",
-    "eslint": "^8.38.0",
     "electron": "^24.3.1",
+    "eslint": "^8.38.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.2"
   },
@@ -40,5 +40,9 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:bytemain/danmaku.git"
-  }
+  },
+  "packageManager": "yarn@3.6.0",
+  "workspaces": [
+    "renderer"
+  ]
 }
