--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
     "@electron-forge/publisher-github": "^6.1.1",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "dotenv": "^16.1.3",
@@ -29,9 +30,8 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "@types/ws": "^8.5.4",
     "eventemitter3": "^5.0.1",
-    "minimist": "^1.2.8",
+    "mri": "^1.2.0",
     "undici": "^5.22.1",
     "update-electron-app": "^2.0.1",
     "vite": "^4.3.9",
