--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.1.3",
     "electron": "^24.3.1",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "filesize": "^10.0.7",
     "tsx": "^3.12.7",
     "typescript": "^5.0.2"
