refactor: improve code

--- a/renderer/tsconfig.json
+++ b/renderer/tsconfig.json
@@ -20,7 +20,9 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@@lib/*": ["../lib/*"],
+      "@@common/*": ["../common/*"]
     }
   },
   "include": ["src"],
