--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "eventemitter3": "^5.0.1",
+    "lodash": "^4.17.21",
     "mri": "^1.2.0",
     "undici": "^5.22.1",
     "update-electron-app": "^2.0.1",
