--- a/renderer/package.json
+++ b/renderer/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "react-virtuoso": "^4.3.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
